--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /fsh
 .sy5-2024-2025-projet-fsh-autotests.nosync
 .sy5-2024-2025-projet-fsh-autotests.nosync
+/test.sh
+.sy5-2024-2025-projet-fsh-autotests.nosync
