--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 .sy5-2024-2025-projet-fsh-autotests.nosync
 /test.sh
 .sy5-2024-2025-projet-fsh-autotests.nosync
+.sy5-2024-2025-projet-fsh-autotests.nosync
